Add and fix linting

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": " Benchmarked comparative selection algorithm plugin for d-pac platform",
   "main": "lib/select.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "jshint lib; jscs lib"
   },
   "repository": {
     "type": "git",
