--- a/.jshintrc
+++ b/.jshintrc
@@ -12,5 +12,5 @@
   "node": true,
   "laxbreak": true,
   "expr": true,
-  "quotmark": "double"
+  "predef": [ "describe", "it", "beforeEach", "before", "after", "afterEach" ]
 }
