--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     {
       "name": "benchmarked-comparative-selection",
       "description": "Two-phased benchmarked comparative selection algorithm",
-      "type": "select"
+      "type": "select",
+      "compatibility": "0.6.0"
     }
   ],
   "devDependencies": {
