--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "require-directory": "^2.1.0"
   },
   "dependencies": {
+    "d-pac.plugins-spec": "^0.4.0",
     "lodash": "^3.9.3",
     "math": "^0.0.3"
   }
