--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     }
   ],
   "devDependencies": {
+    "deepmerge": "^0.2.10",
     "mocha": "^2.2.4",
     "must": "^0.12.0",
     "require-directory": "^2.1.0"
