--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
   },
   "dependencies": {
     "d-pac.plugins-spec": "^0.4.0",
-    "lodash": "^3.9.3",
-    "math": "^0.0.3"
+    "lodash": "^3.9.3"
   }
 }
