--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": " Benchmarked comparative selection algorithm plugin for d-pac platform",
   "main": "lib/select.js",
   "scripts": {
-    "test": "mocha specs/*.spec.js"
+    "test": "mocha specs/*.spec.js --bail"
   },
   "repository": {
     "type": "git",
@@ -39,7 +39,7 @@
     "require-directory": "^2.1.0"
   },
   "dependencies": {
-    "d-pac.plugins-spec": "^0.4.0",
+    "d-pac.plugins-spec": "0.5.0",
     "lodash": "^4.0.0"
   }
 }
