--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "benchmark"
   ],
   "author": "d-pac",
-  "license": "GPL v3",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/d-pac/benchmarked-comparative-selection/issues"
   },
@@ -42,7 +42,8 @@
     "require-directory": "^2.1.0"
   },
   "dependencies": {
+    "d-pac.functions": "1.3.0",
     "d-pac.plugins-spec": "0.5.0",
-    "lodash": "^4.0.0"
+    "lodash": "4.0.0"
   }
 }
